--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ffi-decorators",
   "description": "Use node-ffi via decorators",
   "author": "Tim Fish <tim@timfish.uk>",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "license": "MIT",
   "repository": "https://github.com/timfish/ffi-decorators.git",
   "main": "dist/index.js",
@@ -27,7 +27,7 @@
     "npm-run-all":"^4.1.3",
     "prettier": "^1.13.4",
     "prettier-check": "^2.0.0",
-    "typescript": "^2.9.1",
+    "typescript": "2.8.4",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
     "tslint-eslint-rules": "^5.3.1",
