--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ffi-decorators",
   "description": "Use node-ffi via decorators",
   "author": "Tim Fish <tim@timfish.uk>",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "license": "MIT",
   "repository": "https://github.com/timfish/ffi-decorators.git",
   "main": "dist/index.js",
@@ -18,8 +18,10 @@
     "fix:tslint": "tslint --fix -t stylish --project ./tsconfig.json"
   },
   "dependencies": {
-    "ffi": "^2.2.0",
     "reflect-metadata": "^0.1.12"
+  },
+  "peerDependencies": {
+    "ffi": "^2.0.0"
   },
   "devDependencies": {
     "@types/ffi": "^0.1.0",
