--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ffi-decorators",
   "description": "Use node-ffi via decorators",
   "author": "Tim Fish <tim@timfish.uk>",
-  "version": "0.1.8",
+  "version": "0.2.0",
   "license": "MIT",
   "repository": "https://github.com/timfish/ffi-decorators.git",
   "main": "dist/index.js",
@@ -11,28 +11,42 @@
     "build": "tsc",
     "watch": "tsc --watch",
     "lint": "run-s lint:prettier lint:tslint",
-    "lint:prettier": "prettier-check \"src/**/*.ts\"",
+    "lint:prettier": "prettier-check \"{src,test}/**/*.ts\"",
     "lint:tslint": "tslint -t stylish -p .",
-    "fix": "run-s fix:tslint fix:prettier",
-    "fix:prettier": "prettier --write \"src/**/*.ts\"",
-    "fix:tslint": "tslint --fix -t stylish --project ./tsconfig.json"
+    "fix": "run-s fix:prettier fix:tslint",
+    "fix:prettier": "prettier --write \"{src,test}/**/*.ts\"",
+    "fix:tslint": "tslint --fix -t stylish --project ./tsconfig.json",
+    "test": "node-gyp rebuild --directory test && cross-env TS_NODE_PROJECT=tsconfig.json mocha --require ts-node/register/transpile-only ./test/**/*.ts"
   },
   "dependencies": {
-    "reflect-metadata": "^0.1.12"
+    "debug": "^4.1.1",
+    "reflect-metadata": "^0.1.13"
   },
   "peerDependencies": {
     "ffi": "^2.0.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/chai-as-promised": "^7.1.0",
+    "@types/debug": "^4.1.2",
     "@types/ffi": "^0.1.0",
+    "@types/mocha": "^5.2.6",
     "@types/ref": "^0.0.28",
-    "npm-run-all": "^4.1.3",
-    "prettier": "^1.13.4",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "cross-env": "^5.2.0",
+    "ffi": "^2.3.0",
+    "mocha": "^6.0.2",
+    "nan": "^2.12.1",
+    "node-gyp": "^3.8.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.16.4",
     "prettier-check": "^2.0.0",
+    "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
     "tslint-eslint-rules": "^5.3.1",
     "tslint-language-service": "^0.9.9",
-    "typescript": "2.8.4"
+    "typescript": "^3.3.3"
   }
 }
