--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,7 @@
 {
   "files.exclude": {
     "**/.git": true,
-    "node_modules":true,
-    "dist":true
+    "node_modules": true
   },
   "typescript.tsdk": "node_modules\\typescript\\lib"
 }
